# GUTIL

./: CMakeLists.txt
include/: GUTIL.h  GUTIL_file.h  GUTIL_time.h
src/: CMakeLists.txt  GUTIL_file.cc  GUTIL_time.cc
